2000-08-01  Philip Blundell  <philb@gnu.org>

	* sysdeps/unix/sysv/linux/arm/Makefile [subdir=resource]
	(sysdep_routines): Add oldgetrlimit, oldsetrlimit.
	* sysdeps/unix/sysv/linux/arm/syscalls.list: Add oldgetrlimit,
	oldsetrlimit for GLIBC_2.0.

2000-08-01  Andreas Jaeger  <aj@suse.de>

	* nss/nss_files/files-ethers.c: Use case-insensitive lookup.
	(LINE_PARSER): Allow any number of spaces between ip address and
	number.  Fixes PR libc/1833, reported by rp010gf@voruta.vu.lt.

	* conform/data/netdb.h-data: Remove getipnodebyaddr and friends.

	* include/netdb.h: Remove getipnodebyaddr and friends, leave
	constants in.

	* nis/Versions: Remove _nss_nis_getipnodebyname_r and
	_nss_nisplus_getipnodebyname_r.

	* nis/nss_nis/nis-hosts.c (_nss_nis_getipnodebyname_r): #if 0 for
	now, getipnodebyname is deprecated.
	* nis/nss_nisplus/nisplus-hosts.c (_nss_nisplus_getipnodebyname_r):
	Likewise.

	* inet/Makefile (routines): Don't build getipnodebyaddr and
	friends.

	* intl/Makefile (distribute): Add tst-translit.sh and translit.po.

	* hesiod/Makefile (distribute): Add nss_hesiod/nss_hesiod.h.

	* elf/Makefile (distribute): Add filtmod1.c and filtmod2.c.

	* wctype/Makefile (distribute): Add wchar-lookup.h.

	* sysdeps/generic/Dist: Add bp-checks.h and bp-semctl.h.

	* iconvdata/Makefile (distribute): Add isiri-3342.h.

2000-08-01  Andreas Schwab  <schwab@suse.de>

	* Make-dist (dist): Resolve `..' in file names.

2000-08-01  Andreas Jaeger  <aj@suse.de>

	* stdio-common/Makefile (distribute): Remove removed files, add
	new files.

	* Makefile (distribute): Remove include/db_185.h and db.h.

	* include/db_185.h: Remove, it's not needed anymore.
	* include/db.h: Likewise.

2000-07-31  Ulrich Drepper  <drepper@redhat.com>

	* inet/Makefile (tests): Remove tst-ipnode.
	* include/netdb.h: Add stuff removed from resolv/netdb.h here for
	now.

2000-07-31  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/ia64/elf/initfini.c: Kill dummy section since align and